@@ -1,4 +1,5 @@
 V4.2.2 (in progress)
+[BUG] : Correct bug number: 3083, 3086 (see http://www.automne-cms.org/bug/)
 [REFACTOR] : Add optimisations in pages tree calculations
 [REFACTOR] : Update Less to version 0.3.4-2
 [FEATURE] : Add atm-blockvar tag to allow specification of variables values of any type inside of polymod blocks
